Stop list items overlapping floats

--- a/root/static/css/screen.css
+++ b/root/static/css/screen.css
@@ -25,6 +25,10 @@ table {
     border-collapse: collapse;
 }
 
+ul, ol {
+    list-style-position: inside;
+}
+
 td, th {
     padding: 3px;
     border: solid #aaa 1px;
